Ajustado rotina de encerramento e exclusao de casamento
